--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,30 +46,6 @@
         <!--[if lte IE 9]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
         <![endif]-->
-
-        <div class="content">
-          <nav class="teal" role="navigation">
-            <div class="nav-wrapper container">
-              <a id="logo-container" href="https://www.leadnyze.com" target="_blank" class="brand-logo">
-                <img src="img/big-picture-logo-white.png" alt="Big Picture"/>
-              </a>
-              <ul class="right hide-on-med-and-down">
-                <li>
-                  <a class="btn" href="https://github.com/mfrye/email-finder" target="_blank">Get the code</a>
-                </li>
-              </ul>
-
-              <ul id="nav-mobile" class="side-nav">
-                <li class="logo">
-                  <a id="logo-container" href="https://www.thebigpicture.io" target="_blank">
-                    <img src="img/big-picture-logo-black.png" alt="Big Picture"/>
-                  </a>
-                </li>
-                <li><a href="https://github.com/mfrye/email-finder" target="_blank">Get the code</a></li>
-                <li><a href="https://www.thebigpicture.io" target="_blank">Learn more about Big Picture</a></li>
-              </ul>
-              <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
-            </div>
           </nav>
 
           <div class="section">
@@ -171,9 +147,8 @@
           <div class="container">
             <div class="row">
               <div class="col l4 s12">
-                <h5 class="white-text">A Big Picture project</h5>
-                <p class="grey-text text-lighten-4">Big Picture is a web analytics platform that help you understand customer behavior and identify new leads.</p>
-                <a class="btn waves-effect waves-light lighten-3" target="_blank" href="https://www.thebigpicture.io">Learn more</a>
+               
+              <a class="btn waves-effect waves-light lighten-3" target="_blank" 
               </div>
               <div class="col l4 s12">
                 <h5 class="white-text">Free to use</h5>
@@ -199,8 +174,7 @@
           </div>
           <div class="footer-copyright">
             <div class="container">
-            © 2016 <a class="white-text text-lighten-3" target="_blank" href="https://www.thebigpicture.io">Big Picture</a>
-            <a class="grey-text text-lighten-4 right" href="https://github.com/mfrye/email-finder/blob/master/LICENSE">MIT License</a>
+            © 2018
             </div>
           </div>
         </footer>
