--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
         <meta property="og:site_name" content="Email Finder"/>
         <meta property="og:title" content="Email Finder by Leadnyze"/>
         <meta property="og:image" content="img/email-finder.png"/>
-        <meta property="og:url" content="https://email-finder.herokuapp.com/"/>
+        <meta property="og:url" content="https://leadnyze.herokuapp.com/"/>
         <meta property="og:locale" content="en_US"/>
         <meta name="og:description" content="Easily find any email address for free!"/>
         
@@ -111,24 +111,7 @@
 
         </div>
 
-        <div id="modal1" class="modal">
-          <form id="email-capture">
-            <div class="modal-content">
-              <h4>We're glad you're finding it useful!</h4>
-              <p>If you'd like to keep using Email Finder, please add your email address.</p>
-
-              <div class="email-input">
-                <div class="input-field">
-                  <input id="email" name="email" type="text" class="validate" data-error="Please enter your email">
-                  <label for="email">Your email address</label>
-                </div>
-              </div>
-            </div>
-            <div class="modal-footer">
-              <button type="submit" class=" modal-action modal-close waves-effect waves-green btn-flat">Submit</button>
-            </div>
-          </form>
-         </div>
+        
 
         
                 <br>
