--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <meta name="description" content="Easily find any email address for free!"/>
-        <meta property="og:site_name" content="Email Finder"/>
+        <meta property="og:site_name" content="Email Finder by Leadnyze"/>
         <meta property="og:title" content="Email Finder by Leadnyze"/>
         <meta property="og:image" content="img/email-finder.png"/>
         <meta property="og:url" content="https://leadnyze.herokuapp.com/"/>
