--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,6 +44,8 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
 
         <link rel="stylesheet" href="css/main.css">
+        
+        <script>var continuallySettings = { appID: '69vrppk4rpxq' };</script><script src="https://cdn-app.continual.ly/js/embed/continually-embed.latest.min.js"></script>
 
     </head>
     <body>
