--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,6 +26,17 @@
         <script>var continuallySettings = { appID: '69vrppk4rpxq' };</script>
 <script src="https://cdn-app.continual.ly/js/embed/continually-embed.latest.min.js"></script>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-128679140-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-128679140-1');
+</script>
+
+
     </head>
     <body>
         <!--[if lte IE 9]>
