--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,6 +37,18 @@
 </script>
 
 
+
+<script type="text/javascript">
+    window.smartlook||(function(d) {
+    var o=smartlook=function(){ o.api.push(arguments)},h=d.getElementsByTagName('head')[0];
+    var c=d.createElement('script');o.api=new Array();c.async=true;c.type='text/javascript';
+    c.charset='utf-8';c.src='https://rec.smartlook.com/recorder.js';h.appendChild(c);
+    })(document);
+    smartlook('init', '18767e117f7ce4ec36ace349961c3629c4ac6f47');
+</script>
+
+
+
     </head>
     <body>
         <!--[if lte IE 9]>
