--- a/views/index.ejs
+++ b/views/index.ejs
@@ -143,7 +143,8 @@
         s.parentNode.insertBefore(r,s);})
         (document,"script","serve.albacross.com/track.js","89876666");
     </script>
- 
+ <script src="https://my.hellobar.com/006f337074954d1f31ab41065665011192fb935f.js" type="text/javascript" charset="utf-8" async="async"></script>
+
         
 
         
