--- a/views/index.ejs
+++ b/views/index.ejs
@@ -115,7 +115,7 @@
 
                   <div class="row">
                     <div class="input-field col s12">
-                      <p class="grey-text">Note: The system works best for work domains and may have difficultly finding personal emails (Gmail, Yahoo, etc).</p>
+                      <p class="grey-text">Note:Please make sure there are no spaces left before and after entering the First Name, Last Name and Domain. The system works best for work domains and may have difficultly finding personal emails (Gmail, Yahoo, etc).</p>
                     </div>
                   </div>
 
