--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,6 +46,17 @@
     smartlook('init', '18767e117f7ce4ec36ace349961c3629c4ac6f47');
 </script>
 
+<!-- Hotjar Tracking Code for https://leadnyze.herokuapp.com/ -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:1081521,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
 
 
     </head>
